other/pdb-minavailable/.chainsaw-test/ss-bad.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: badss01
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: ghcr.io/kyverno/test-busybox:1.35
