other/pdb-minavailable/.chainsaw-test/ss-good.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss01
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 2
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
# Workload is not in PDB namespace.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss02
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
# Workload does not match PDB selector.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss03
  namespace: pdb-minavailable-ns
spec:
  selector:
    matchLabels:
      app: bb
  replicas: 1
  template:
    metadata:
      labels:
        app: bb
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
---
# Workload has 0 replicas and is not in PDB namespace.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: goodss04
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 0
  template:
    metadata:
      labels:
        app: busybox
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: busbyox
        image: busybox:1.35
