other/pdb-minavailable/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pdb-minavailable-check
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
